Fix input handling for ICS generator

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "packageManager": "bun@1.2.19",
   "scripts": {
+    "serve": "bunx serve . --port 3000 --no-clean-urls",
     "test": "vitest run"
   },
   "devDependencies": {
