feat(pwa): add color-scheme specific app and favicon icons
- Add light/dark `theme-color` and favicon links in `index.html` using
  `prefers-color-scheme` media queries.
- Switch Apple touch icon and manifest icon source to `icons/icon-light.png`.
- Clean up HTML formatting/indentation for improved consistency and readability.

This ensures the app uses theme-appropriate icons and better matches system light/dark modes.feat(pwa): add color-scheme specific app and favicon icons

- Add light/dark `theme-color` and favicon links in `index.html` using
  `prefers-color-scheme` media queries.
- Switch Apple touch icon and manifest icon source to `icons/icon-light.png`.
- Clean up HTML formatting/indentation for improved consistency and readability.

This ensures the app uses theme-appropriate icons and better matches system light/dark modes.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "description": "Instantly convert your travel plans into calendar events.",
   "icons": [
     {
-      "src": "icons/icon.png",
+      "src": "icons/icon-light.png",
       "sizes": "512x512",
       "type": "image/png"
     }
